--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Login Authentication System</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <h1>Authentication</h1>
+    </nav>
+    <main>
+        <h1>Login</h1>
+    </main>
 </body>
 </html>
