--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     </nav>
     <main>
         <h1>Login</h1>
+        <form>
+            <label>Username</label>
+            <input type="text" placeholder="Username"/>
+            <label>Password</label>
+            <input type="text" placeholder="Password">
+            <button onclick="#">Login</button>
+        </form>
     </main>
 </body>
 </html>
