--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Authentication System</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
-        <h1>Authentication</h1>
+        <ul class="nav-items">
+            <li class="nav-item"><a href="#">Login</a></li>
+            <li class="nav-item"><a href="#">Signup</a></li>
+            <li class="nav-item"><a href="#">About</a></li>
+        </ul>
     </nav>
     <main>
         <h1>Login</h1>
@@ -16,7 +21,7 @@
             <input type="text" placeholder="Username"/>
             <label>Password</label>
             <input type="text" placeholder="Password">
-            <button onclick="#">Login</button>
+            <button onclick="">Login</button>
         </form>
     </main>
 </body>
