--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
     </nav>
     <main>
         <h1>Login</h1>
-        <form>
-            <label>Username</label>
-            <input type="text" placeholder="Username"/>
-            <label>Password</label>
-            <input type="text" placeholder="Password">
-            <button onclick="">Login</button>
+        <form action="">
+            <label for="username">Username</label>
+            <input id="username" type="text" placeholder="Enter Username"/>
+            <br>
+            <br>
+            <label for="password">Password</label>
+            <input id="password" type="text" placeholder="Enter Password">
+            <br>
+            <br>
+            <input type="submit" value="Login">
         </form>
     </main>
 </body>
