--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <br>
             <br>
             <label for="password">Password</label>
-            <input id="password" type="text" placeholder="Enter Password">
+            <input id="password" type="password" placeholder="Enter Password">
             <br>
             <br>
             <input type="submit" value="Login">
