--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Authentication System</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <script src="./main.js"></script>
 </head>
 <body>
     <nav class="navbar">
-        <ul class="nav-items">
-            <li class="nav-item"><a href="#">Login</a></li>
-            <li class="nav-item"><a href="#">Signup</a></li>
-            <li class="nav-item"><a href="#">About</a></li>
-        </ul>
+        <div class="pagename">
+            <a href="#">Login Page</a>
+        </div>
+        <div class="items">
+            <ul class="nav-items">
+                <li class="nav-item"><a href="#">About</a></li>
+                <li class="nav-item"><button>Signup</button></li>
+            </ul>
+        </div>
     </nav>
     <main>
-        <h2>Login</h2>
+        <h1>Login</h1>
         <form action="">
             <label for="username">Username</label>
             <input id="username" type="text" placeholder="Enter Username"/>
@@ -25,8 +30,17 @@
             <input id="password" type="password" placeholder="Enter Password">
             <br>
             <br>
-            <input type="submit" value="Login">
+            <input type="submit" value="Login" class="submit">
+            <div class="links">
+                <a href="#" class="forgotpass">Forgot Password</a>
+                <p>|</p>
+                <a href="#" class="signup">signup</a>
+            </div>
         </form>
+        
     </main>
+    <!-- <footer>
+        <p>Made By Harshit Kumar</p>
+    </footer> -->
 </body>
 </html>
