--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Authentication System</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./main.js"></script>
+    
 </head>
 <body>
     <nav class="navbar">
@@ -23,7 +23,7 @@
         <h1>Login</h1>
         <form action="">
             <label for="username">Username</label>
-            <input id="username" type="text" placeholder="Enter Username"/>
+            <input id="username" class="username" type="text" placeholder="Enter Username"/>
             <br>
             <br>
             <label for="password">Password</label>
@@ -36,6 +36,7 @@
                 <p>|</p>
                 <a href="#" class="signup">signup</a>
             </div>
+            <script></script>
         </form>
         
     </main>
@@ -43,4 +44,5 @@
         <p>Made By Harshit Kumar</p>
     </footer> -->
 </body>
+<script src="./main.js"></script>
 </html>
