--- a/signup.html
+++ b/signup.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Authentication System</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="./style.css">
-    
 </head>
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="#">Login Page</a>
+            <a href="/index.html">Login Page</a>
         </div>
         <div class="items">
             <ul class="nav-items">
-                <li class="nav-item"><a href="#">About</a></li>
+                <li class="nav-item"><a href="/about.html">About</a></li>
                 <li class="nav-item"><button>Signup</button></li>
             </ul>
         </div>
     </nav>
     <main>
-        <h1>Login</h1>
-        <form action="">
+        <h1>Sign Up</h1>
+        <form class="signup-form" action="">
+            <label for="name">Name</label>
+            <input type="text" id="name">
             <label for="username">Username</label>
             <input id="username" class="username" type="text" placeholder="Enter Username"/>
             <br>
@@ -40,9 +41,5 @@
         </form>
         
     </main>
-    <!-- <footer>
-        <p>Made By Harshit Kumar</p>
-    </footer> -->
 </body>
-<script src="./main.js"></script>
 </html>
