--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <br>
             <br>
             <label for="password">Password</label>
-            <input id="password" class="password" type="password" placeholder="Enter Password">
+            <input id="password" class="password" type="password" placeholder="Enter Password"/>
             <br>
             <a href="#" class="forgotpass">Forgot password?</a>
             <br>
