--- a/login.html
+++ b/login.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Log in</title>
     <link rel="stylesheet" href=".\style.css">   
 </head>
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="/login.html">Login Page</a>
+            <a href="./login.html">Log in Page</a>
         </div>
-        <div class="items">
+        <div class="items-div">
             <ul class="nav-items">
-                <li class="nav-item"><a href="/about.html">About</a></li>
-                <li class="nav-item"><button>Signup</button></li>
+                <li class="nav-item"><a href="./about.html">About</a></li>
+                <li class="nav-item">|</li>
+                <li class="nav-item"><button><a href="./signup.html">Sign Up</a></button></li>
             </ul>
         </div>
     </nav>
     <main>
-        <h1 class="login-heading">Login</h1>
+        <h1 class="login-heading">Log in</h1>
         <form class="login-form" action="">
             <p class="alert"></p>
             <label for="username">Username</label>
@@ -31,10 +32,10 @@
             <br>
             <a href="#" class="forgotpass">Forgot password?</a>
             <br>
-            <input type="submit" value="Login" class="submit">
+            <input type="submit" value="Login" class="submit" onclick="validation()">
             <div class="signup-link">
                 <p>Don't have an account?</p>
-                <a href="#" class="signup">signup</a>
+                <a href="./signup.html" class="signup">signup</a>
             </div>
         </form>
         
