--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="./login.html">Log in Page</a>
+            <a href="./login.html"><span>L</span>ogin<span>A</span>uth</a>
         </div>
         <div class="items-div">
             <ul class="nav-items">
@@ -30,7 +30,7 @@
             <label for="password">Password</label>
             <input id="password" class="password" type="password" placeholder="Enter Password"/>
             <br>
-            <a href="#" class="forgotpass">Forgot password?</a>
+            <a href="./forgot.html" class="forgotpass">Forgot password?</a>
             <br>
             <input type="submit" value="Login" class="submit">
             <div class="signup-link">
