--- a/about.html
+++ b/about.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href=".\style.css">   
 </head>
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="/login.html">Login Page</a>
+            <a href="./login.html"><span>L</span>ogin<span>A</span>uth</a>
         </div>
-        <div class="items">
+        <div class="items-div">
             <ul class="nav-items">
-                <li class="nav-item"><button>Login</button></li>
-                <li class="nav-item"><button>Signup</button></li>
+                <li class="nav-item"><a href="./login.html"><button>Log in</button></a></li>
+                <li class="nav-item"><a href="./signup.html"><button>Sign Up</button></a></li>
             </ul>
         </div>
     </nav>
     <main>
         <h1 class="about-heading">About</h1>
-        <p>Welcome to our innovative Login and Authentication System Project! At the core of our endeavor lies the commitment to enhancing online security and user experience. In a digital world where trust and privacy are paramount, we have embarked on a journey to create a robust, user-friendly, and cutting-edge authentication solution.</p>
+        <div class="about">
+            <p>Welcome to our innovative Login and Authentication System Project! At the core of our endeavor lies the commitment to enhancing online security and user experience. In a digital world where trust and privacy are paramount, we have embarked on a journey to create a robust, user-friendly, and cutting-edge authentication solution.</p>
+        </div>
     </main>
+    <footer>
+        <p>Made By Harshit Kumar</p>
+        <p>copyright &copy; <a href="./login.html">LoginAuth</a></p>
+    </footer>
 </body>
 </html>
