--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
     </nav>
     <main>
         <h1 class="login-heading">Log in</h1>
-        <form class="login-form" action="" onsubmit="return validation()">
+        <form class="login-form" action="" onsubmit="return loginValidation()">
             <p class="login-error"></p>
             <br />
             <label for="username">Username</label>
