--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
     </nav>
     <main>
         <h1 class="signup-heading">Sign Up</h1>
-        <form class="signup-form" action="" onsubmit="return formValidation()">
+        <form class="signup-form" action="" onsubmit="return signupValidation()">
             <span class="error signup-error"></span>
             <div class="name-username">
                 <div>
@@ -60,64 +60,6 @@
         <p>copyright &copy; <a href="./login.html">LoginAuth</a></p>
     </footer>
 </body>
-<script>
-    const name = document.querySelector('.name');
-    const username = document.querySelector('.username');
-    const email = document.querySelector('.email');
-    const password = document.querySelector('.password');
-    const form_error = document.querySelectorAll('.error');
-    
-    for(let element of form_error){
-        element.style.display = "none";
-    }
 
-    // Display error on the web page
-    function displayError(selector, error){
-        for(let element of form_error){
-        element.style.display = "none";
-        }
-        const element = document.querySelector(selector);
-        element.style.display = "";
-        element.innerHTML = error;
-    }
-
-    // Validate form inputs
-    function formValidation(){
-        var submit = true;
-        // const specialChars = /[@!#$%^&*()+=_-|{[}"';:?/<>,.`~]/;
-        
-        if (name.value.length < 4){
-            displayError(".name-error", "Invalid Name !!");
-            submit =  false;
-        }
-
-        else if (username.value == ""){
-            displayError(".username-error", "Invalid Username !!");
-            submit =  false;
-        }
-
-        else if (email.value.length < 12){
-            displayError(".email-error", "Invalid email address !!");
-            submit =  false;
-        }
-
-        else if (password.value.length < 8){
-            displayError(".password-error", 
-            "Strong password requires At least :<br>\
-            * 8 characters<br>\
-            * One lowercase character<br>\
-            * One special character<br>\
-            * One uppercase character<br>\
-            * One number");
-            submit =  false;
-        }
-
-        else if(name.value != "" && username.value != "" && email.value != "" && password.value != ""){
-            displayError(".signup-error", "User not found !!");
-            submit =  false;
-        }
-
-        return submit;
-    }
-</script>
+<script src="scripts.js"></script>
 </html>
