--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="./login.html"><span>L</span>ogin<span>A</span>uth</a>
+            <a href="./indexindex.html"><span>L</span>ogin<span>A</span>uth</a>
         </div>
         <div class="items-div">
             <ul class="nav-items">
-                <li class="nav-item"><a href="./login.html"><button>Log in</button></a></li>
+                <li class="nav-item"><a href="./index.html"><button>Log in</button></a></li>
                 <li class="nav-item"><a href="./signup.html"><button>Sign Up</button></a></li>
             </ul>
         </div>
@@ -26,7 +26,7 @@
     </main>
     <footer>
         <p>Made By Harshit Kumar</p>
-        <p>copyright &copy; <a href="./login.html">LoginAuth</a></p>
+        <p>copyright &copy; <a href="./indexindex.html">LoginAuth</a></p>
     </footer>
 </body>
 </html>
