--- a/forgot.html
+++ b/forgot.html
@@ -21,7 +21,7 @@
                 </li>
                 <li class="nav-item">|</li>
                 <li class="nav-item">
-                    <a href="./login.html"><button>Log in</button></a>
+                    <a href="./index.html"><button>Log in</button></a>
                 </li>
                 <li class="nav-item">
                     <a href="./signup.html"><button>Sign Up</button></a>
@@ -42,13 +42,13 @@
             <input type="submit" value="Reset Password" class="reset" />
             <div class="signup-link">
                 <p>Return to</p>
-                <a href="./login.html" class="login">log in</a>
+                <a href="./index.html" class="login">log in</a>
             </div>
         </form>
     </main>
     <footer>
         <p>Made By Harshit Kumar</p>
-        <p>copyright &copy; <a href="./login.html">LoginAuth</a></p>
+        <p>copyright &copy; <a href="./index.html">LoginAuth</a></p>
     </footer>
 </body>
 <script src="./scripts.js"></script>
