--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="./login.html"><span>L</span>ogin<span>A</span>uth</a>
+            <a href="./index.html"><span>L</span>ogin<span>A</span>uth</a>
         </div>
         <div class="items-div">
             <ul class="nav-items">
@@ -51,7 +51,7 @@
     </main>
     <footer>
         <p>Made By Harshit Kumar</p>
-        <p>Copyright &copy; <a href="./login.html">LoginAuth</a></p>
+        <p>Copyright &copy; <a href="./index.html">LoginAuth</a></p>
     </footer>
 </body>
 
