--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
             <ul class="nav-items">
                 <li class="nav-item"><a href="./about.html" class="about-btn">About</a></li>
                 <li class="nav-item">|</li>
-                <li class="nav-item"><a href="./login.html"><button>Log in</button></a></li>            </ul>
+                <li class="nav-item"><a href="./index.html"><button>Log in</button></a></li>            </ul>
         </div>
     </nav>
     <main>
@@ -50,14 +50,14 @@
             <input type="submit" value="Create Account" class="create">
             <div class="signup-link">
                 <p>Already have an account?</p>
-                <a href="./login.html" class="login">Log in</a>
+                <a href="./index.html" class="login">Log in</a>
             </div>
         </form>
         
     </main>
     <footer>
         <p>Made By Harshit Kumar</p>
-        <p>copyright &copy; <a href="./login.html">LoginAuth</a></p>
+        <p>copyright &copy; <a href="./index.html">LoginAuth</a></p>
     </footer>
 </body>
 
