--- a/forgot.html
+++ b/forgot.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="./login.html"><span>L</span>ogin<span>A</span>uth</a>
+            <a href="./index.html"><span>L</span>ogin<span>A</span>uth</a>
         </div>
 
         <div class="items-div">
