--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="./indexindex.html"><span>L</span>ogin<span>A</span>uth</a>
+            <a href="./index.html"><span>L</span>ogin<span>A</span>uth</a>
         </div>
         <div class="items-div">
             <ul class="nav-items">
@@ -26,7 +26,7 @@
     </main>
     <footer>
         <p>Made By Harshit Kumar</p>
-        <p>copyright &copy; <a href="./indexindex.html">LoginAuth</a></p>
+        <p>copyright &copy; <a href="./index.html">LoginAuth</a></p>
     </footer>
 </body>
 </html>
