--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="pagename">
-            <a href="./login.html"><span>L</span>ogin<span>A</span>uth</a>
+            <a href="./index.html"><span>L</span>ogin<span>A</span>uth</a>
         </div>
         <div class="items-div">
             <ul class="nav-items">
